--- a/src/main/resources/com/example/fencedeviceapp/layout.fxml
+++ b/src/main/resources/com/example/fencedeviceapp/layout.fxml
@@ -3,73 +3,67 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="550.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/23.0.1"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.fencedeviceapp.Controller">
+<AnchorPane prefHeight="661.0" prefWidth="1120.0" styleClass="root" stylesheets="@../../../../java/com/example/fencedeviceapp/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fencedeviceapp.Controller">
     <children>
-        <VBox layoutX="50.0" layoutY="50.0" spacing="15.0">
+        <VBox layoutX="29.0" layoutY="50.0" prefWidth="963.0" spacing="15.0">
             <padding>
-                <Insets top="10" right="10" bottom="10" left="10"/>
+                <Insets bottom="10" left="10" right="10" top="10" />
             </padding>
             <children>
-                <!-- IP Input and Connect Button -->
-                <HBox spacing="10.0" alignment="CENTER_LEFT">
-                    <padding>
-                        <Insets top="5" right="5" bottom="5" left="5"/>
-                    </padding>
-                    <children>
-                        <Label text="Enter IP Address" minWidth="100"/>
-                        <TextField fx:id="ipField" promptText="e.g., 192.168.1.100" minWidth="200"/>
-                        <Button text="Connect" onAction="#handleConnect" prefWidth="100"/>
-                    </children>
-                </HBox>
-
-                <!-- Status indicator for connection -->
-                <HBox spacing="10.0" alignment="CENTER_LEFT">
-                    <padding>
-                        <Insets top="5" right="5" bottom="5" left="5"/>
-                    </padding>
-                    <children>
-                        <Label text="Auto-refresh: Every 3 seconds" style="-fx-font-style: italic; -fx-text-fill: #555555;"/>
-                    </children>
-                </HBox>
-
-                <!-- Container for HTTP Controls -->
-                <VBox fx:id="controlsContainer" spacing="10">
-                    <padding>
-                        <Insets top="10" right="10" bottom="10" left="10"/>
-                    </padding>
-                    <!-- Will be populated dynamically from Controller -->
-                </VBox>
-
-                <!-- Title for status section -->
-                <Label text="Device Status" style="-fx-font-size: 14; -fx-font-weight: bold;"/>
-
-                <!-- Container to dynamically insert status indicators -->
-                <VBox fx:id="statusContainer" spacing="5">
-                    <padding>
-                        <Insets top="10" right="10" bottom="10" left="10"/>
-                    </padding>
-                    <!-- Will be populated dynamically from Controller -->
-                </VBox>
-
-                <!-- Title for response section -->
-                <Label text="XML Response" style="-fx-font-size: 14; -fx-font-weight: bold;"/>
-
-                <!-- Response Output Area -->
-                <TextArea fx:id="responseArea" prefHeight="180.0" prefWidth="500.0" wrapText="true">
-                    <padding>
-                        <Insets top="5" right="5" bottom="5" left="5"/>
-                    </padding>
-                </TextArea>
+            <TabPane prefHeight="551.0" prefWidth="960.0" tabClosingPolicy="UNAVAILABLE">
+              <tabs>
+                <Tab text="HTTP Data">
+                  <content>
+                    <AnchorPane minHeight="447.0" minWidth="0.0" prefHeight="508.0" prefWidth="941.0">
+                           <children>
+                              <VBox fx:id="httpcontrolsContainer" layoutX="6.0" layoutY="14.0" prefHeight="242.0" prefWidth="450.0" spacing="10">
+                                 <padding>
+                                    <Insets bottom="10" left="10" right="10" top="10" />
+                                 </padding>
+                              </VBox>
+                              <VBox fx:id="httpstatusContainer" layoutX="7.0" layoutY="260.0" prefHeight="251.0" prefWidth="449.0" spacing="5">
+                                 <padding>
+                                    <Insets bottom="10" left="10" right="10" top="10" />
+                                 </padding>
+                              </VBox>
+                              <TextArea fx:id="httpresponseArea" layoutX="475.0" layoutY="21.0" prefHeight="239.0" prefWidth="443.0" />
+                           </children>
+                        </AnchorPane>
+                  </content>
+                </Tab>
+                  <Tab text="TCP Data">
+                     <content>
+                        <AnchorPane minHeight="447.0" minWidth="0.0" prefHeight="508.0" prefWidth="941.0">
+                           <children>
+                              <VBox fx:id="controlsContainer1" layoutX="6.0" layoutY="14.0" prefHeight="242.0" prefWidth="450.0" spacing="10">
+                                 <padding>
+                                    <Insets bottom="10" left="10" right="10" top="10" />
+                                 </padding>
+                              </VBox>
+                              <VBox fx:id="statusContainer1" layoutX="7.0" layoutY="260.0" prefHeight="251.0" prefWidth="449.0" spacing="5">
+                                 <padding>
+                                    <Insets bottom="10" left="10" right="10" top="10" />
+                                 </padding>
+                              </VBox>
+                              <TextArea fx:id="responseArea1" layoutX="475.0" layoutY="21.0" prefHeight="239.0" prefWidth="443.0" />
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </Tab>
+              </tabs>
+            </TabPane>
             </children>
         </VBox>
+            <TextField fx:id="ipField" layoutX="177.0" layoutY="25.0" minWidth="200" promptText="e.g., 192.168.1.100" styleClass="text-field" stylesheets="@../../../../java/com/example/fencedeviceapp/styles.css" />
+            <Label layoutX="41.0" layoutY="28.0" minWidth="100" styleClass="section-title" stylesheets="@../../../../java/com/example/fencedeviceapp/styles.css" text="Enter IP Address" />
+            <Button layoutX="391.0" layoutY="26.0" onAction="#handleConnect" prefWidth="100" stylesheets="@../../../../java/com/example/fencedeviceapp/styles.css" text="Connect" />
+            <Label layoutX="810.0" layoutY="29.0" style="-fx-font-style: italic; -fx-text-fill: #555555;" text="Auto-refresh: Every 3 seconds" />
     </children>
 </AnchorPane>
