--- a/src/main/resources/com/example/fencedeviceapp/layout.fxml
+++ b/src/main/resources/com/example/fencedeviceapp/layout.fxml
@@ -23,17 +23,20 @@
                   <content>
                     <AnchorPane minHeight="447.0" minWidth="0.0" prefHeight="508.0" prefWidth="941.0">
                            <children>
+
                               <VBox fx:id="httpcontrolsContainer" layoutX="6.0" layoutY="14.0" prefHeight="242.0" prefWidth="450.0" spacing="10">
                                  <padding>
                                     <Insets bottom="10" left="10" right="10" top="10" />
                                  </padding>
                               </VBox>
+                               <!-- Title for status section -->
+                               <Label text="Device Status" style="-fx-font-size: 14; -fx-font-weight: bold;"/>
                               <VBox fx:id="httpstatusContainer" layoutX="7.0" layoutY="260.0" prefHeight="251.0" prefWidth="449.0" spacing="5">
                                  <padding>
                                     <Insets bottom="10" left="10" right="10" top="10" />
                                  </padding>
                               </VBox>
-                              <TextArea fx:id="httpresponseArea" layoutX="475.0" layoutY="21.0" prefHeight="239.0" prefWidth="443.0" />
+                              <TextArea fx:id="httpresponseArea" layoutX="475.0" layoutY="21.0" prefHeight="470.0" prefWidth="443.0" />
                            </children>
                         </AnchorPane>
                   </content>
@@ -52,7 +55,7 @@
                                     <Insets bottom="10" left="10" right="10" top="10" />
                                  </padding>
                               </VBox>
-                              <TextArea fx:id="responseArea1" layoutX="475.0" layoutY="21.0" prefHeight="239.0" prefWidth="443.0" />
+                              <TextArea fx:id="responseArea1" layoutX="475.0" layoutY="21.0" prefHeight="434.0" prefWidth="443.0" />
                            </children>
                         </AnchorPane>
                      </content>
